Closed Bug 1272767 Opened 8 years ago Closed 8 years ago

Fix a few places where graphics MOZ_CRASH does not have a GFX prefixed message

Categories

(Core :: Graphics, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla49
Tracking Status
firefox49 --- fixed

People

(Reporter: milan, Assigned: milan)

Details

(Whiteboard: gfx-noted)

Attachments

(1 file)

Comment on attachment 8752344 [details]
MozReview Request: Bug 1272767: More graphics MOZ_CRASH-es getting GFX prefix. Also, follow up on bug 1270180 comments. r?mchang

https://reviewboard.mozilla.org/r/52537/#review49547
Attachment #8752344 - Flags: review?(mchang) → review+
Whiteboard: gfx-noted
Assignee: nobody → milan
https://hg.mozilla.org/mozilla-central/rev/b8949c5d73ce
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla49
You need to log in before you can comment on or make changes to this bug.