Bug 1272767: More graphics MOZ_CRASH-es getting GFX prefix. Also, follow up on bug 1270180 comments. r=mchang

MozReview-Commit-ID: 1rlHdDG4Cbw

--HG--
extra : rebase_source : 8bf84d2b1c4cc5bc48821b1eadbadf8edc6ce1ba